Changes with Apache 1.3.20

  *) Changes to 'ab'; fixed int overrun's, added statistics, output in
     csv/gnuplot format, rudimentary ssl support and various other tweaks
     to make results more true to what is measured. The upshot of this it
     turns out that 'ab' has often underreported the true performance of
     apache. Often by a order of magnitude :-) See talk/paper of Sander 
     Temme <sctemme@covalent.net> at April ApacheCon 2001 for details.
     [Dirk-Willem van Gulik]

  *) Hooked calls to opendir() and readdir() so that we could add '.' and
     '..' to the entry list.  By default NetWare does not return these
     entries which caused mod_autoindex not to display the parent directory
     entry. [Brad Nicholes <BNICHOLES@novell.com>]

  *) Solved a very serious threading problem with WinNT/2K Services.  The
     moment master_main told that the shutdown was complete, the parent
     control thread exited Apache, leaving mod_jserv's Java process running
     and alternately invoking mod_perl's cleanups from the correct thread
     or the service control thread. [William Rowe]

  *) Populate the Win32 HKLM\System\CurrentControlSet\Services\[apachesvc]
     key with the Description value of the running server across all Win32
     platforms, including NT, ME and 9x.  This value is the server_version
     string including loaded modules.  [William Rowe]

  *) Fix ndbm.h include problems with various Linux distributions and 
     brain-dead glibc >= 2.1, which sometimes have ndbm.h in a
     non-standard db1/ subdir. PR#6929
     [Victor J. Orlikowski]

  *) Empty headers are allowed by RFC2068 section 4.2.  The presence or
     absence of an empty header can be significant.  The current mod_proxy
     of httpd 1.3.x removes empty headers. Change mod_proxy to preserve
     empty headers. [Christian von Roques <roques@mti.ag>]

  *) Enhance rotatelogs so that a UTC offset can be specified, and