@@ -101,7 +101,7 @@ struct nsrec {
  * statistics - obvious
  */
 
-#ifndef h_errno
+#if !defined(h_errno) && !defined(CYGWIN)
 extern int h_errno; /* some machines don't have this in their headers */
 #endif
 
