@@ -1,5 +1,9 @@
 Changes with Apache 1.3.20
 
+  *) Integrate support for the Cygwin 1.x platform (a POSIX emulation layer
+     for Win32 systems, see http://www.cygwin.com)
+     [Stipe Tolj <tolj@wapme-systems.de>]
+
   *) Changes to 'ab'; fixed int overrun's, added statistics, output in
      csv/gnuplot format, rudimentary ssl support and various other tweaks
      to make results more true to what is measured. The upshot of this it
